<resources>
    <string name="app_name">What\'s wrong with my car?</string>
    <string name="engine_light">Search by dash light</string>
    <string name="cel_codes">Check Engine Codes</string>
    <string name="datalog">View real-time data</string>
    <string name="mechanic_menu">Find a mechanic</string>
    <string name="gas_station_menu">Find a gas station</string>
    <string name="dealership_menu">Find a dealership</string>
    <string name="title_activity_maps">Map</string>
    <string name="air_fuel_label">Air/Fuel Ratio</string>
    <string name="engine_rpm">Engine RPM</string>
    <string name="intake_temp">IAT</string>
    <string name="fuel">Fuel Pressure</string>
    <string name="air_pressure">Barometric Pressure</string>
    <string name="trouble codes">Trouble codes</string>
</resources>
